# Time-Series-and-Financial-Engineering-With-Python

./: .gitignore  Chapter 0 - Dates And Time In Python.ipynb  Chapter 1 - Time Series Manipulation.ipynb  Chapter 10 - Markov Regime-Switching Model.ipynb  Chapter 12 - Kalman Filter.ipynb  Chapter 2 - Lag Operator and Difference Equations.ipynb  Chapter 3 - Simple and Log Returns.ipynb  Chapter 4 - Stationary Processes.ipynb  Chapter 5 - ARIMA models.ipynb  FinEng Chapter 1. Bond and Modern Portfolio Theory.ipynb  FinEng Chapter 2 - CAPM.ipynb  FinEng Chapter 3 - Options.ipynb  FinEng Chapter 5 - Value at Risk (VaR).ipynb  README.md  pyproject.toml  setup.py
const/: literals.py  numbers.py
financial_engineering_notebooks/: FinEng Chapter 0 - Wiener Process RW Modeling.ipynb  FinEng Chapter 1 - Bond and Modern Portfolio Theory.ipynb  FinEng Chapter 4 - Rates Modelling.ipynb
notebooks/: pyproject.toml
notebooks/financial_engineering_notebook/: FinEng Chapter 0 - Wiener Process RW Modeling.ipynb  FinEng Chapter 1 - Bond and Modern Portfolio Theory.ipynb  FinEng Chapter 1 - Fokker Planck Equation.ipynb  FinEng Chapter 2 - CAPM.ipynb  FinEng Chapter 3 - Options.ipynb  FinEng Chapter 4 - Rates Modelling.ipynb  FinEng Chapter 5 - Value at Risk (VaR).ipynb  test.py
notebooks/time_series_analysis/: Chapter 0 - Dates And Time In Python.ipynb  Chapter 1 - Time Series Manipulation.ipynb  Chapter 10 - Markov Regime-Switching Model.ipynb  Chapter 12 - Kalman Filter.ipynb  Chapter 15 -  Machine Learning.ipynb  Chapter 16 - Implementing Technical Analysis.ipynb  Chapter 17 - Performance Measurement.ipynb  Chapter 2 - Lag Operator and Difference Equations.ipynb  Chapter 3 - Simple and Log Returns.ipynb  Chapter 4 - Stationary Processes and Trend Removal.ipynb  Chapter 5 - ARIMA models.ipynb  Chapter 6 - ARCH and GARCH.ipynb  Chapter 7 -  Cointegration.ipynb  Chapter 8 - Value at Risk (VaR).ipynb  Chapter 9 - Vector Autoregressive Model (VAR).ipynb
test/: test_fin_utils.py
tests/: test_fin_utils.py
(+11 files in other folders)
