[tool.poetry]
name = "time-series-and-financial-engineering-with-python"
version = "0.1.0"
description = ""
authors = ["weijie-chen <weijiechen00@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
