[tool.poetry]
name = "time-series-and-financial-engineering-with-python"
version = "0.1.0"
description = ""
authors = ["weijie-chen <weijiechen00@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.1"
numpy = "^1.26.4"
pandas = "^2.2.2"
scipy = "^1.13.1"
yfinance = "^0.2.40"
setuptools = "^70.0.0"
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
