[tool.poetry]
name = "time-series-and-financial-engineering"
version = "0.1.0"
description = "Tutorial on time series and financial engineering"
authors = ["weijie-chen <weijiechen00@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter-black = "^0.3.4"
black = {extras = ["jupyter"], version = "^24.4.2"}
pandas = "^2.2.2"
numpy = "^1.26.0"
matplotlib = "^3.9.0"
scipy = "^1.13.0"
jupyter = "^1.0.0"
ipykernel = "^6.29.4"
yfinance = "^0.2.40"
pytest = "^8.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
